tests/NormalTests/paczka1/fuzzy1/21414143.err
Error in line 1: oYq5 A913 2,8
Error in line 13: oYq5 S862 98,1
Error in line 15: tZynzOA9JIi A913 83,7
Error in line 21: 0mOyNH A913 62,7
Error in line 27: h9cd7SzGWY0 A798 40,6
Error in line 35: tZynzOA9JIi S862 18,8
